# KubeDoctor

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
kubedoctor/: __main__.py  cli.py
kubedoctor/clients/: helm_client.py  kubernetes.py
kubedoctor/commands/: diagnose.py  helm.py
kubedoctor/core/: recommendations.py
tests/: test_helm.py  test_kubernetes.py  test_recommendations.py
