[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kubedoctor"
version = "0.1.0"
description = "A CLI tool for diagnosing Kubernetes applications."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Harsh Shrimali" }
]

dependencies = [
    "kubernetes==36.0.2",
    "rich==15.0.0",
    "typer==0.26.8"
]

[project.scripts]
kubedoctor = "kubedoctor.cli:app"